--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/site/ticketnetwork.png" alt="TicketNetwork" />
+											<img loading="lazy" src="images/site/ticketnetwork.png" alt="TicketNetwork" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">TicketNetwork</h3>
@@ -105,7 +105,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/demo/ticketliquidator-demo.png" alt="Ticket Liquidator Demo" />
+											<img loading="lazy" src="images/demo/ticketliquidator-demo.png" alt="Ticket Liquidator Demo" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Ticket Liquidator Demo</h3>
@@ -133,7 +133,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/demo/ticketmystery-demo.png" alt="TicketMystery Demo" />
+											<img loading="lazy" src="images/demo/ticketmystery-demo.png" alt="TicketMystery Demo" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">TicketMystery Demo</h3>
@@ -160,7 +160,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/site/broadwaytoday.png" alt="Broadway Today" />
+											<img loading="lazy" src="images/site/broadwaytoday.png" alt="Broadway Today" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Broadway Today</h3>
@@ -190,7 +190,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/site/americanforcestravel.png" alt="American Forces Travel" />
+											<img loading="lazy" src="images/site/americanforcestravel.png" alt="American Forces Travel" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">American Forces Travel</h3>
@@ -243,7 +243,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/site/megaseats.png" alt="MegaSeats" />
+											<img loading="lazy" src="images/site/megaseats.png" alt="MegaSeats" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">MegaSeats</h3>
@@ -307,7 +307,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/site/ticketliquidator.png" alt="TicketLiquidator" />
+											<img loading="lazy" src="images/site/ticketliquidator.png" alt="TicketLiquidator" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">TicketLiquidator</h3>
@@ -336,7 +336,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/site/zeromarkup.png" alt="ZeroMarkup" />
+											<img loading="lazy" src="images/site/zeromarkup.png" alt="ZeroMarkup" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Zero Markup</h3>
@@ -371,7 +371,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/site/newyorktheatertickets.png" alt="NewYorkTheaterTickets" />
+											<img loading="lazy" src="images/site/newyorktheatertickets.png" alt="NewYorkTheaterTickets" />
 										</div>
 										<div class="project-info  project-content">
 											<h3 class="project-title">NewYorkTheaterTickets</h3>
@@ -404,7 +404,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/site/tickets-ezevent.png" alt="EzEvent Tickets" />
+											<img loading="lazy" src="images/site/tickets-ezevent.png" alt="EzEvent Tickets" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">EzEvent Tickets</h3>
@@ -431,7 +431,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/demo/wsj-demo.png" alt="Wall Street Journal Demo" />
+											<img loading="lazy" src="images/demo/wsj-demo.png" alt="Wall Street Journal Demo" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Wall Street Journal Demo</h3>
@@ -464,7 +464,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/demo/opentable-demo.png" alt="OpenTable Demo" />
+											<img loading="lazy" src="images/demo/opentable-demo.png" alt="OpenTable Demo" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">OpenTable Tickets</h3>
@@ -491,7 +491,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/demo/muzit-performer-demo.png" alt="Muzit Performer Demo" />
+											<img loading="lazy" src="images/demo/muzit-performer-demo.png" alt="Muzit Performer Demo" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Muzit Performer Demo</h3>
@@ -519,7 +519,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/site/thebloodywin.png" alt="The Bloody Win" />
+											<img loading="lazy" src="images/site/thebloodywin.png" alt="The Bloody Win" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">The Bloody Win Tour Site</h3>
@@ -547,7 +547,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/demo/dod-demo.png" alt="Dept. of Defense Demo" />
+											<img loading="lazy" src="images/demo/dod-demo.png" alt="Dept. of Defense Demo" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Dept. of Defense Demo</h3>
@@ -584,7 +584,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/site/onbroadway.png" alt="OnBroadway" />
+											<img loading="lazy" src="images/site/onbroadway.png" alt="OnBroadway" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">OnBroadway</h3>
@@ -613,7 +613,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/site/corporate-ticketnetwork.png" alt="TicketNetwork Corporate Site" />
+											<img loading="lazy" src="images/site/corporate-ticketnetwork.png" alt="TicketNetwork Corporate Site" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">TicketNetwork Corporate Site</h3>
@@ -644,7 +644,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/results-widget.png" alt="Event Results Widget" />
+											<img loading="lazy" src="images/feature/results-widget.png" alt="Event Results Widget" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Event Results Widget</h3>
@@ -682,7 +682,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/search-widget.png" alt="Search Widget" />
+											<img loading="lazy" src="images/feature/search-widget.png" alt="Search Widget" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Search Widget</h3>
@@ -716,7 +716,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/venues-near-you.png" alt="Venues Near You" />
+											<img loading="lazy" src="images/feature/venues-near-you.png" alt="Venues Near You" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Venues Near You</h3>
@@ -755,7 +755,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/top-sellers.png" alt="Top Sellers Tool" />
+											<img loading="lazy" src="images/feature/top-sellers.png" alt="Top Sellers Tool" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Top Sellers Tool</h3>
@@ -796,7 +796,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/enhanced-event-results.png" alt="Enhanced Event Results" />
+											<img loading="lazy" src="images/feature/enhanced-event-results.png" alt="Enhanced Event Results" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Enhanced Event Results</h3>
@@ -840,7 +840,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/home-away-filters.png" alt="Home/Away Filters" />
+											<img loading="lazy" src="images/feature/home-away-filters.png" alt="Home/Away Filters" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Home/Away Filters</h3>
@@ -877,7 +877,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/results-with-filters.png" alt="Event Results with Filters" />
+											<img loading="lazy" src="images/feature/results-with-filters.png" alt="Event Results with Filters" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Event Results with Filters</h3>
@@ -916,7 +916,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/calendar-widget.png" alt="Calendar Widget" />
+											<img loading="lazy" src="images/feature/calendar-widget.png" alt="Calendar Widget" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Calendar Widget</h3>
@@ -944,7 +944,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/card-results-with-images.png" alt="Card Results with Images" />
+											<img loading="lazy" src="images/feature/card-results-with-images.png" alt="Card Results with Images" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Card Results with Images</h3>
@@ -980,7 +980,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/template-revamp.png" alt="Template Revamp" />
+											<img loading="lazy" src="images/feature/template-revamp.png" alt="Template Revamp" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Template Revamp</h3>
@@ -1017,7 +1017,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/flip-cards.png" alt="Flip Cards" />
+											<img loading="lazy" src="images/feature/flip-cards.png" alt="Flip Cards" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Flip Cards</h3>
@@ -1045,7 +1045,7 @@
 									</div>
 									<article class="tile-content">
 										<div class="project-image project-content">
-											<img src="images/feature/calendar-results.png" alt="Event Results Mapped to Calendar" />
+											<img loading="lazy" src="images/feature/calendar-results.png" alt="Event Results Mapped to Calendar" />
 										</div>
 										<div class="project-info project-content">
 											<h3 class="project-title">Event Results Mapped to Calendar</h3>
