--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/ticketnetwork-thumbnail.png" alt="TicketNetwork" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">TicketNetwork</p>
+											<p class="thumbnail-title">TicketNetwork <span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2020</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -98,9 +97,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/ticketliquidator-demo-thumbnail.png" alt="Ticket Liquidator Demo" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Ticket Liquidator</p>
+											<p class="thumbnail-title">Ticket Liquidator <span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Demo Site</p>
-											<p class="thumbnail-date">2019</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -126,9 +124,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/ticketmystery-demo-thumbnail.png" alt="TicketMystery Demo" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Ticket Mystery</p>
+											<p class="thumbnail-title">Ticket Mystery <span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Demo Site</p>
-											<p class="thumbnail-date">2019</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -153,9 +150,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/broadwaytoday-thumbnail.png" alt="Broadway Today" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">BroadwayToday</p>
+											<p class="thumbnail-title">BroadwayToday <span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2019</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -183,9 +179,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/americanforcestravel-thumbnail.png" alt="American Forces Travel" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">American Forces Travel</p>
+											<p class="thumbnail-title">American Forces Travel <span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2019</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -236,9 +231,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/megaseats-thumbnail.png" alt="MegaSeats" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">MegaSeats</p>
+											<p class="thumbnail-title">MegaSeats <span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2019</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -269,9 +263,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/ticketscenter-thumbnail.png" alt="Tickets Center" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">TicketsCenter</p>
+											<p class="thumbnail-title">TicketsCenter <span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2019</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -300,9 +293,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/ticketliquidator-thumbnail.png" alt="TicketLiquidator" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">TicketLiquidator</p>
+											<p class="thumbnail-title">TicketLiquidator <span class="thumbnail-date">2018</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2018</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -329,9 +321,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/zeromarkup-thumbnail.png" alt="ZeroMarkup" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">ZeroMarkup</p>
+											<p class="thumbnail-title">ZeroMarkup <span class="thumbnail-date">2018</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2018</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -364,9 +355,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/newyorktheatertickets-thumbnail.png" alt="NewYorkTheaterTickets" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">NewYorkTheaterTickets</p>
+											<p class="thumbnail-title">NewYorkTheaterTickets <span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2017</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -397,9 +387,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/tickets-ezevent-thumbnail.png" alt="EzEvent Tickets" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">EzEvent Tickets</p>
+											<p class="thumbnail-title">EzEvent Tickets <span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2017</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -424,9 +413,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/wsj-demo-thumbnail.png" alt="Wall Street Journal Demo" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">WSJ Tickets</p>
+											<p class="thumbnail-title">WSJ Tickets <span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Demo Site</p>
-											<p class="thumbnail-date">2017</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -457,9 +445,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/opentable-demo-thumbnail.png" alt="OpenTable Demo" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">OpenTable</p>
+											<p class="thumbnail-title">OpenTable <span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Demo Site</p>
-											<p class="thumbnail-date">2017</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -484,9 +471,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/muzit-performer-demo-thumbnail.png" alt="Muzit Performer Demo" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Pet Sounds</p>
+											<p class="thumbnail-title">Pet Sounds <span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Demo Site</p>
-											<p class="thumbnail-date">2017</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -512,9 +498,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/thebloodywin-thumbnail.png" alt="The Bloody Win" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">The BloodyWin</p>
+											<p class="thumbnail-title">The BloodyWin <span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2017</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -540,9 +525,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/dod-demo-thumbnail.png" alt="Wall Street Journal Tickets" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">DoD</p>
+											<p class="thumbnail-title">DoD <span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Demo Site</p>
-											<p class="thumbnail-date">2017</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -577,9 +561,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/onbroadway-thumbnail.png" alt="OnBroadway" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">OnBroadway</p>
+											<p class="thumbnail-title">OnBroadway <span class="thumbnail-date">2016</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2016</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -606,9 +589,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/corporate-ticketnetwork-thumbnail.png" alt="TicketNetwork Corporate Site" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Corporate TN</p>
+											<p class="thumbnail-title">Corporate TN <span class="thumbnail-date">2015</span></p>
 											<p class="thumbnail-type">Website</p>
-											<p class="thumbnail-date">2015</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -637,9 +619,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/results-widget-thumbnail.png" alt="Event Results Widget" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Event Results Widget</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2020</p>
+											<p class="thumbnail-title">Event Results Widget <span class="thumbnail-date">2020</span></p>
+											<p class="thumbnail-type">Widget Builder, Widget</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -675,9 +656,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/search-widget-thumbnail.png" alt="Search Widget" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Search Widget</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2020</p>
+											<p class="thumbnail-title">Search Widget <span class="thumbnail-date">2020</span></p>
+											<p class="thumbnail-type">Widget Builder, Widget</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -709,9 +689,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/venues-near-you-thumbnail.png" alt="Venues Near You" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Venues Near You</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2020</p>
+											<p class="thumbnail-title">Venues Near You <span class="thumbnail-date">2020</span></p>
+											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -748,9 +727,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/top-sellers-thumbnail.png" alt="Top Sellers Tool" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Top Sellers Tool</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2020</p>
+											<p class="thumbnail-title">Top Sellers Tool <span class="thumbnail-date">2020</span></p>
+											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -789,9 +767,9 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/enhanced-event-results-thumbnail.png" alt="Enhanced Event Results" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Enhanced Event Results</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2020</p>
+											<p class="thumbnail-title">Enhanced Event Results <span class="thumbnail-date">2020</span></p>
+											<p class="thumbnail-type">Site Feature</p>
+											
 										</div>
 									</div>
 									<article class="tile-content">
@@ -833,9 +811,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/home-away-filters-thumbnail.png" alt="Home/Away Filters" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Home/Away Filters</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2019</p>
+											<p class="thumbnail-title">Home/Away Filters <span class="thumbnail-date">2019</span></p>
+											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -870,9 +847,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/results-with-filters-thumbnail.png" alt="Event Results with Filters" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Results with Filters</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2018</p>
+											<p class="thumbnail-title">Results with Filters <span class="thumbnail-date">2018</span></p>
+											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -909,9 +885,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/calendar-widget-thumbnail.png" alt="Calendar Widget" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Calendar Widget</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2017</p>
+											<p class="thumbnail-title">Calendar Widget <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-type">Widget Builder, Widget</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -937,9 +912,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/card-results-with-images-thumbnail.png" alt="Card Results with Images" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Image Card Results</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2017</p>
+											<p class="thumbnail-title">Image Card Results <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -973,9 +947,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/template-revamp-thumbnail.png" alt="Template Revamp" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Template Revamp</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2017</p>
+											<p class="thumbnail-title">Template Revamp <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-type">Adjustable Template</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -1010,9 +983,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/flip-cards-thumbnail.png" alt="Flip Cards" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Flip Cards</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2017</p>
+											<p class="thumbnail-title">Flip Cards <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
 									<article class="tile-content">
@@ -1038,9 +1010,8 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/calendar-results-thumbnail.png" alt="Event Results Mapped to Calendar" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Calendar Results</p>
-											<p class="thumbnail-type">Feature</p>
-											<p class="thumbnail-date">2017</p>
+											<p class="thumbnail-title">Calendar Results <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
 									<article class="tile-content">
